Fixed missing background dots Removed ENV from github yml

--- a/src/css/components/playerElement.scss
+++ b/src/css/components/playerElement.scss
@@ -24,7 +24,7 @@
     height: 100%;
     position: relative;
 
-    background-image: url('../../assets/img/background-dots.png');
+    background-image: url('./assets/img/background-dots.png');
     background-repeat: repeat;
     background-color: rgba(1,1,1,0.3);
 
